tests/integration/dns-checkpod.yml
apiVersion: v1
kind: Pod
metadata:
    labels:
        k8s-app: dnscheck
    name: dnscheck
    namespace: default
spec:
    containers:
        image: tutum/dnsutils
        name: dnscheck
        command:
            sleep
        args:
            86400
