tests/integration/nginx-green.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-green
  labels:
    app: nginx-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-green
  template:
    metadata:
      labels:
        app: nginx-green
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/share/nginx/html/index.html
          name: welcome-green
          subPath: welcome-green.html
      volumes:
      - configMap:
          defaultMode: 420
          name: welcome-green
        name: welcome-green
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-green
spec:
  selector:
    app: nginx-green
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  #type: NodePort
