tests/integration/pvcs.yml
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
   name: test-cinder-volume-1
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: default-de-nbg6-1a
---
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
   name: test-cinder-volume-2
spec:
  accessModes:
  - ReadWriteOnce
  resources:
    requests:
      storage: 1Gi
  storageClassName: default-de-nbg6-1b
